--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       RECOVERY_URL:
-        description: 'RECOVERY URL'
+        description: 'https://fastupload.io/en/ZruPiA8gYnco/K2vuTcLrJvjCHib/jar3XXd6N32dD/recovery.img'
         required: true
         default: 'https://transfer.sh/(RECOMMENDED)'
 
