--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -6,7 +6,7 @@ on:
       RECOVERY_URL:
         description: 'RECOVERY URL'
         required: true
-        default: 'https://eu4.easyupload.io/download/bvhkrj/pt8hm6idt52r6ttxk4xrhvfp3qiyum2h'
+        default: 'https://transfer.sh/(RECOMMENDED)'
 
 env:
   RECOVERY_URL: https://oshi.at/Rpjg
